--- a/src/index.css
+++ b/src/index.css
@@ -11,4 +11,25 @@ body {
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
     monospace;
+    
+}
+
+.container{
+  margin-top:200px;
+  width: 680px;
+}
+
+.margin-right-5px{
+  margin-right: 5px;
+}
+.nav-bar-custom{
+  background-color: rgb(0, 255, 0) !important;
+}
+
+.nav-bar-button-custom{
+  background-color: gainsboro;
+}
+
+#weBuild{
+  margin-top: 170px;
 }
