--- a/src/index.css
+++ b/src/index.css
@@ -33,3 +33,27 @@ code {
 #weBuild{
   margin-top: 170px;
 }
+
+#whiteLinks {
+  color: white;
+  font-weight: bold;
+}
+
+#whiteLinks2 {
+  color: white;
+  font-weight: bold;
+}
+
+#whiteLinks3 {
+  color: white;
+  font-weight: bold;
+}
+
+#whiteLinks4 {
+  color: white;
+  font-weight: bold;
+}
+
+#studentPortal {
+  font-weight: bold;
+}
